--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
   <url>https://bitbucket.org/yildiz-engine-team/common-util</url>
 
   <artifactId>common-util</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
 
   <packaging>jar</packaging>
   <inceptionYear>2017</inceptionYear>
