--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>be.yildiz-games</groupId>
-    <version>2.2.5</version>
+    <version>2.2.6-SNAPSHOT</version>
   </parent>
 
   <dependencies>
