--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>be.yildiz-games</groupId>
-    <version>2.2.6-SNAPSHOT</version>
+    <version>3.0.1</version>
   </parent>
 
   <dependencies>
@@ -54,7 +54,7 @@
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
+      <artifactId>junit-jupiter-engine</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
