--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ before_install:
 
 script:
   - chmod 777 deploy-maven-central.sh
-  - docker run -v $PWD:/src -v $HOME/.m2:/root/.m2 -e GPG_KEY=$GPG_KEY -e GPG_PWD=$GPG_PWD -e VAULT_TOKEN=$VAULT_TOKEN -e BRANCH=$TRAVIS_BRANCH moussavdb/build-java ./deploy-maven-central.sh
+  - docker run -v $PWD:/src -v $HOME/.m2:/root/.m2 -e OSSRH_PWD_TOKEN=$OSSRH_PWD_TOKEN -e OSSRH_USER_TOKEN=&OSSRH_USER_TOKEN -e GPG_KEY=$GPG_KEY -e GPG_PWD=$GPG_PWD -e VAULT_TOKEN=$VAULT_TOKEN -e BRANCH=$TRAVIS_BRANCH moussavdb/build-java ./deploy-maven-central.sh
