--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
-sudo: required
-
-language: generic
+language: minimal
 
 git:
   depth: false
 
-dist: xenial
+os: linux
+dist: jammy
 
 cache:
   directories:
@@ -14,9 +13,6 @@ cache:
 services:
   - docker
 
-before_install:
-  - docker pull moussavdb/build-java
-
 script:
-  - travis_retry docker run -v $PWD:/src -v $HOME/.m2:/root/.m2 -e BRANCH=$TRAVIS_BRANCH -e VAULT_TOKEN=$VAULT_TOKEN moussavdb/build-java
+  - travis_retry docker run -v $PWD:/src -v $HOME/.m2:/root/.m2 -e VAULT_TOKEN=$VAULT_TOKEN moussavdb/build-java:21
 
